# Aero-CFD-Solver

./: .gitignore  CMakeLists.txt  LICENSE
scripts/: build_cuda.cmd
src/cfd_core/: CMakeLists.txt
src/cfd_core/cuda/: CMakeLists.txt  cuda_backend.cu  euler_backend.cu  euler_kernels.cu  euler_kernels.cuh
src/cfd_core/include/cfd_core/: cuda_backend.hpp
src/cfd_core/include/cfd_core/solvers/: euler_solver.hpp
src/cfd_core/io/: io_vtk_stub.cpp
src/cfd_core/numerics/: residual_stub.cpp
src/cfd_core/solvers/: euler_solver.cpp
tests/cpp/: test_euler_parity.cpp
